fix: navigation not wrapping correctly

--- a/css/custom/app.css
+++ b/css/custom/app.css
@@ -494,6 +494,7 @@ a.hide_popup {
 	.navbar-nav {
 		align-items: center;
 		display: flex;
+		flex-wrap: wrap;
 		gap: .5em;
 		user-select: none;
 	}
@@ -661,6 +662,7 @@ nav#mainNav {
 	}
 
 	ul.navbar-nav {
+		flex-wrap: wrap;
 		gap: 0;
 	}
 	li > a {
